src/FinancialForce Accounting/objects/codaInvoice__c.object
<CustomObject>
    <customHelpPage>codahelpinvoice</customHelpPage>
    <description>Holds information that applies to the whole invoice such as customer account and due date.</description>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <formula>Account__r.CODAAccountTradingCurrency__c</formula>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOutstanding__c</fullName>
        <formula>Transaction__r.AccountOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountTotal__c</fullName>
        <formula>Transaction__r.AccountTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <formula>Account__r.BillingStreet + &apos; &apos; + Account__r.BillingCity + &apos; &apos; + Account__r.BillingState + &apos; &apos; + Account__r.BillingPostalCode + &apos; &apos; + Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyReference__c</fullName>
        <description>Company Reference</description>
        <formula>OwnerCompany__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CopyDefaultPrintedTextDefinitions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Default Printed Text Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatingRecurringInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creating Recurring Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Invoice currency.</description>
        <formula>InvoiceCurrency__r.Name</formula>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerReference__c</fullName>
        <description>The customer reference.</description>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiscardReason__c</fullName>
        <description>The reason this Invoice was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingTotal__c</fullName>
        <description>Invoice Outstanding.</description>
        <formula>Transaction__r.DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTotal__c</fullName>
        <description>Invoice Total.</description>
        <formula>Transaction__r.DocumentTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <description>The date the invoice is due for payment.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstDueDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date the invoice is due for the first payment.</description>
        <label>First Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GLA used for Income Schedule</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GenerateAdjustmentJournal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked a currency adjustment journal will be automatically generated when you post this invoice in a multi-currency environment.</description>
        <label>Generate Adjustment Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>codaGroupingReference__c</referenceTo>
        <relationshipLabel>Sales Invoices (Income Schedule Group)</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>SalesInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <description>Payment schedule interval</description>
        <label>Interval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the sales invoice was created.</description>
        <label>Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceDescription__c</fullName>
        <description>A description of the invoice.</description>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InvoiceGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Group</label>
        <referenceTo>codaGroupingReference__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Invoice Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceStatus__c</fullName>
        <description>The current status of the invoice.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceTotal__c</fullName>
        <description>The total value of all the items on the invoice, including the tax.</description>
        <formula>NetTotal__c +  TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <formula>TEXT(Transaction__r.MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetTotal__c</fullName>
        <description>The total value of items on the invoice, before tax.</description>
        <label>Net Total</label>
        <summarizedField>codaInvoiceLineItem__c.NetValue__c</summarizedField>
        <summaryForeignKey>codaInvoiceLineItem__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfPayments__c</fullName>
        <description>Payment schedule number of payments</description>
        <label>Number of Payments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofJournals__c</fullName>
        <label>Number of Journals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity to which this invoice is related.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OutstandingValue__c</fullName>
        <formula>Transaction__r.DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentScheduleTotal__c</fullName>
        <label>PaymentScheduleTotal</label>
        <summarizedField>codaInvoiceInstallmentLineItem__c.Amount__c</summarizedField>
        <summaryForeignKey>codaInvoiceInstallmentLineItem__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentSchedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( InvoiceStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( Transaction__r.DocumentOutstandingTotal__c == 0,&apos;Paid&apos;,
if( Transaction__r.DocumentTotal__c == Transaction__r.DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodInterval__c</fullName>
        <label>Period Interval</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrintStatus__c</fullName>
        <label>Print Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Printed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Printed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrintedText1AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 1 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedText1Heading__c</fullName>
        <label>Printed Text 1 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText1TextDefinitionName__c</fullName>
        <label>Printed Text 1 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText1Text__c</fullName>
        <label>Printed Text 1 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrintedText2AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 2 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedText2Heading__c</fullName>
        <label>Printed Text 2 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText2TextDefinitionName__c</fullName>
        <label>Printed Text 2 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText2Text__c</fullName>
        <label>Printed Text 2 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrintedText3AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 3 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedText3Heading__c</fullName>
        <label>Printed Text 3 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText3TextDefinitionName__c</fullName>
        <label>Printed Text 3 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintedText3Text__c</fullName>
        <label>Printed Text 3 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SalesTaxDocumentCode__c</fullName>
        <label>External tax document code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTaxStatus__c</fullName>
        <description>The current tax status of the invoice.</description>
        <label>External Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Calculated</fullName>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <formula>Account__r.ShippingStreet + &apos; &apos; + Account__r.ShippingCity + &apos; &apos; + Account__r.ShippingState + &apos; &apos; + Account__r.ShippingPostalCode + &apos; &apos; + Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <description>The method of delivery.</description>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>codaInvoiceLineItem__c.TaxValue1__c</summarizedField>
        <summaryForeignKey>codaInvoiceLineItem__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>codaInvoiceLineItem__c.TaxValue2__c</summarizedField>
        <summaryForeignKey>codaInvoiceLineItem__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>codaInvoiceLineItem__c.TaxValue3__c</summarizedField>
        <summaryForeignKey>codaInvoiceLineItem__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code)</relationshipLabel>
        <relationshipName>InvoicesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code 2)</relationshipLabel>
        <relationshipName>InvoicesTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoices (Tax Code 3)</relationshipLabel>
        <relationshipName>InvoicesTaxCode3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Sales Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usepartperiods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Part Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Sales Invoice</label>
    <nameField>
        <displayFormat>SIN{000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>